project(compiler_main)

add_subdirectory(big_int)
include_directories(big_int)
add_subdirectory(lexical)
include_directories(lexical)
add_subdirectory(util)
include_directories(util)
add_subdirectory(parse)
include_directories(parse)

add_executable(compiler_main main.cpp)
target_link_libraries(compiler_main big_int)
target_link_libraries(compiler_main lexical)
target_link_libraries(compiler_main parse)
target_link_libraries(compiler_main util)